// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package protos;

option java_package = "protos";
option java_multiple_files = true;

enum Fruit {
  UNSPECIFIED = 0;
  APPLE = 1;
  BANANA = 2;
  ORANGE = 3;
}

message FruitBox {
  Fruit fruit = 1;
}

enum Greetings {
  ENUM_TYPE_NAME_UNKNOWN = 0;
  HELLO = 1;
  // Use an enum value that's the same as the UNRECOGNIZED value, to test
  // that they are differentiated by the runtime.
  GOODBYE = -1;
}

message Text {
  Greetings greeting = 1;
}
